<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/relativeLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginPage">

<!--text view for heading-->A

<Button
    android:id="@+id/idBtnLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="10dp"
    android:text="Login"
    android:textAllCaps="false"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/idEdtPassword" />

<!--edit text for user name-->
<TextView
    android:id="@+id/idTVHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center_horizontal"
    android:padding="5dp"
    android:text="EventMe"
    android:textAlignment="center"
    android:textColor="@color/purple_700"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/idEdtUserName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="10dp"
    android:hint="Enter UserName"
    android:inputType="textEmailAddress"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/idTVHeader" />

<!--edit text for user password-->
<EditText
    android:id="@+id/idEdtPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="10dp"
    android:hint="Enter Password"
    android:inputType="textPassword"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/idEdtUserName" />

<!--button to register our new user-->
<Button
    android:id="@+id/action_loginPage_to_registerPage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="102dp"
    android:layout_marginEnd="10dp"
    android:text="Register Account"
    android:textAllCaps="false"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/idEdtPassword" />

<Button
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="132dp"
    android:layout_marginEnd="10dp"
    android:text="Browse as Guest"
    android:textAllCaps="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/action_loginPage_to_registerPage" />

</androidx.constraintlayout.widget.ConstraintLayout>