<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/explorePage"
        android:title="Explore"
        android:icon="@drawable/explore"/>
    <item android:id="@+id/mapPage"
        android:title="Map"
        android:icon="@drawable/map"/>
    <item android:id="@+id/profilePage"
        android:title="Profile"
        android:icon="@drawable/profile"/>

</menu>